--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/btnSignUpWithEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SIGNUP WITH EMAIL"
+        android:text="@string/signup_with_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
@@ -20,7 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Login"
+        android:text="@string/login"
         app:layout_constraintEnd_toEndOf="@+id/btnSignUpWithEmail"
         app:layout_constraintStart_toStartOf="@+id/btnSignUpWithEmail"
         app:layout_constraintTop_toTopOf="@+id/guideline2" />
@@ -63,7 +63,7 @@
             android:layout_marginBottom="5dp"
             android:drawableStart="@drawable/ic_email"
             android:ems="20"
-            android:hint="Email"
+            android:hint="@string/email"
             android:inputType="textPersonName" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -88,7 +88,7 @@
             android:layout_marginEnd="20dp"
             android:drawableStart="@drawable/ic_password"
             android:ems="20"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPersonName|textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -96,7 +96,7 @@
         android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login to Continue"
+        android:text="@string/login_to_continue"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
         app:layout_constraintEnd_toEndOf="parent"
